fix(Tabs): fix align property with value center (#3991)

--- a/packages/dnb-eufemia/src/components/tabs/style/dnb-tabs.scss
+++ b/packages/dnb-eufemia/src/components/tabs/style/dnb-tabs.scss
@@ -54,6 +54,7 @@
       justify-content: flex-end;
     }
     &--center &__tablist {
+      flex: 1;
       justify-content: center;
     }
 
